// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The tile selector Matches the current snapshot 1`] = `
<styled.div
  id="tile-selector"
>
  <styled.div>
    <styled.div
      className="tile"
      isSelected={false}
      key="1"
      onClick={[Function]}
    >
      <Tile
        id={1}
        isSelected={false}
      />
    </styled.div>
    <styled.div
      className="tile"
      isSelected={false}
      key="2"
      onClick={[Function]}
    >
      <Tile
        id={2}
        isSelected={false}
      />
    </styled.div>
    <styled.div
      className="tile"
      isSelected={false}
      key="3"
      onClick={[Function]}
    >
      <Tile
        id={3}
        isSelected={false}
      />
    </styled.div>
    <styled.div
      className="tile"
      isSelected={false}
      key="4"
      onClick={[Function]}
    >
      <Tile
        id={4}
        isSelected={false}
      />
    </styled.div>
    <styled.div
      className="tile"
      isSelected={false}
      key="5"
      onClick={[Function]}
    >
      <Tile
        id={5}
        isSelected={false}
      />
    </styled.div>
    <styled.div
      className="tile"
      isSelected={false}
      key="6"
      onClick={[Function]}
    >
      <Tile
        id={6}
        isSelected={false}
      />
    </styled.div>
    <styled.div
      className="tile"
      isSelected={false}
      key="7"
      onClick={[Function]}
    >
      <Tile
        id={7}
        isSelected={false}
      />
    </styled.div>
    <styled.div
      className="tile"
      isSelected={false}
      key="8"
      onClick={[Function]}
    >
      <Tile
        id={8}
        isSelected={false}
      />
    </styled.div>
  </styled.div>
</styled.div>
`;

exports[`The tile selector Matches the current snapshot if a tile is selected 1`] = `
<styled.div
  id="tile-selector"
>
  <styled.div>
    <styled.div
      className="tile"
      isSelected={false}
      key="1"
      onClick={[Function]}
    >
      <Tile
        id={1}
        isSelected={false}
      />
    </styled.div>
    <styled.div
      className="tile"
      isSelected={false}
      key="2"
      onClick={[Function]}
    >
      <Tile
        id={2}
        isSelected={false}
      />
    </styled.div>
    <styled.div
      className="tile"
      isSelected={true}
      key="3"
      onClick={[Function]}
    >
      <Tile
        id={3}
        isSelected={true}
      />
    </styled.div>
    <styled.div
      className="tile"
      isSelected={false}
      key="4"
      onClick={[Function]}
    >
      <Tile
        id={4}
        isSelected={false}
      />
    </styled.div>
    <styled.div
      className="tile"
      isSelected={false}
      key="5"
      onClick={[Function]}
    >
      <Tile
        id={5}
        isSelected={false}
      />
    </styled.div>
    <styled.div
      className="tile"
      isSelected={false}
      key="6"
      onClick={[Function]}
    >
      <Tile
        id={6}
        isSelected={false}
      />
    </styled.div>
    <styled.div
      className="tile"
      isSelected={false}
      key="7"
      onClick={[Function]}
    >
      <Tile
        id={7}
        isSelected={false}
      />
    </styled.div>
    <styled.div
      className="tile"
      isSelected={false}
      key="8"
      onClick={[Function]}
    >
      <Tile
        id={8}
        isSelected={false}
      />
    </styled.div>
  </styled.div>
</styled.div>
`;
